# indian-poker

./: Dockerfile
.github/: dependabot.yml
frontend/: Dockerfile  index.html
indian-poker-github/: README.md  docker-compose.yml  railway.json
indian-poker-github/groth16-snark/: PROJECT_SUMMARY.md  README.md  jest.config.js  package.json  tsconfig.json
indian-poker-github/groth16-snark/circuits/: cardCommitment.circom  dealVerify.circom  shuffleVerify.circom
indian-poker-github/indian-poker-server/: .env.example  CLIENT_VERIFICATION.md  Dockerfile  PROJECT_SUMMARY.md  RANDOMNESS_APPROACH.md  README.md  SECURITY_CHANGES.md  SECURITY_LOGGING.md  SNARK_TRUSTED_SETUP.md  client-example.html  client-verification.js  demo.js  index.js  minimal-server.js  package-lock.json  package.json  railway.json  security-utils.js  snark-integration.js  test-client.html  test-client.js
indian-poker-github/pir-server/: .env.example  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PIR_QUERY_SCHEMA.md  README.md  SECURITY_CLARIFICATION.md  docker-compose.yml  jest.config.js  package-lock.json  package.json
indian-poker-github/pir-server/src/: server.js
indian-poker-github/wasm-crypto/: COMPONENT_SUMMARY.md  Cargo.toml  Dockerfile  INTEGRATION.md  README.md  build.sh  compile-and-test.sh  package.json  test-runner.js
indian-poker-github/wasm-crypto/benches/: crypto_benchmarks.rs
indian-poker-github/wasm-crypto/benchmarks/: performance.js
indian-poker-github/wasm-crypto/src/: lib.rs
indian-poker-github/wasm-crypto/web/: demo.html  index.html  index.ts  wasm-wrapper.ts
(+33 files in other folders)
