[package]
name = "wasm-crypto"
version = "0.1.0"
edition = "2021"
description = "High-performance WebAssembly cryptographic operations"
license = "MIT"
repository = "https://github.com/example/wasm-crypto"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
blst = "0.3"
hex = "0.4"
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
# Cryptographic primitives
sha2 = "0.10"
blake2 = "0.10"
curve25519-dalek = { version = "4.0", default-features = false, features = ["alloc"] }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[[bench]]
name = "crypto_benchmarks"
harness = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
